PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2007, PHP 5.2.2RC2
- Fixed bug #41075 (memleak when creating default object caused exception). 
  (Dmitry)
- Fixed bug #41063 (chdir doesn't like root paths). (Dmitry)
- Fixed bug #41061 ("visibility error" in ReflectionFunction::export()).
  (Johannes)
- Fixed bug #41034 (json_encode() ignores null byte started keys in arrays).
  (Ilia)
- Fixed bug #40861 (strtotime() doesn't handle double negative relative time
  units correctly). (Derick)
- Fixed bug #40290 (strtotime() returns unexpected result with particular
  timezone offset). (Derick)
- Fixed bug #39965 (Latitude and longitude are backwards in date_sun_info()).
  (Derick)
- Fixed bug #39416 (Milliseconds in date()). (Derick)
- Updated timezone database to version 2007.5. (Derick)


10 Apr 2007, PHP 5.2.2RC1
- Improved bundled GD
  . Sync to 2.0.35
  . colors allocated henceforth from the resulting image overwrite the palette 
	  colors (Rob Leslie)
  . Improved thread safety of the gif support (Roman Nemecek, Nuno, Pierre)
	. Use the dimension of the GIF frame to create the destination image (Pierre)
	. Load only once the local color map (Pierre)
  . Improved thread safety of the freetype cache (Scott MacVicar, Nuno, Pierre)
- Upgraded libraries bundled in the Windows distribution. (Edin)
  . c-client (imap) to version 2006e
  . libpq (PostgreSQL) to version 8.2.3
  . libmysql (MySQL) to version 5.0.37
  . openssl to version 0.9.8e
- Upgraded SQLite 3 to version 3.3.15 (Ilia)
- Upgraded PCRE to version 7.0 (Nuno)
- Updated timezone database to version 2007.3. (Derick)
- Improved FastCGI SAPI to support external pipe and socket servers on win32.
  (Dmitry)
- Improved Zend Memory Manager
  . guarantee of reasonable time for worst cases of best-fit free block
    searching algorithm. (Dmitry)